# hi-notebooks

./: .gitignore  .readthedocs.yml  Dockerfile  Dockerfile.docs  Dockerfile.execution  Dockerfile.notebooks  README.md  build_docs_locally.sh  local_docs.sh  pyproject.toml  serve_docs_locally.sh
docs/: conf.py  index.rst  pyproject.toml
docs/notebooks/generative_models/: normalizing_flows.ipynb
scripts/: build_docs_locally.sh  install_alvistack_linux_mint_213.sh  install_alvistack_ubuntu_2204.sh  serve_docs_locally.sh
