[project]
name = "sphinx-docs"
version = "0.1.0"
description = "Sphinx documentation with Jupyter rendering"
dependencies = [
    "Sphinx==8.1.3",
    "sphinx-rtd-theme==3.0.2",
    "nbsphinx==0.9.6",
    "sphinxcontrib-bibtex>=2.6",
    "sphinxcontrib-svg2pdfconverter",
    "sphinx-gallery",
    "ipython",
    "Pygments",
    "pandoc",
]
requires-python = ">=3.11"
